Load data pre FDataGrid adjustment

--- a/FDA_letter_classifiers.ipynb
+++ b/FDA_letter_classifiers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3ca463c3",
+   "id": "d247d653",
    "metadata": {},
    "source": [
     "Load in data tables and format them into F Data Grids"
@@ -10,8 +10,285 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "1cd2f3db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d76db750",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = os.getcwd()\n",
+    "dataroot = r'C:\\Users\\George\\Documents\\Python Scripts\\FDA\\Letters\\Data'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "01e1c9d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a0</th>\n",
+       "      <th>a1</th>\n",
+       "      <th>a2</th>\n",
+       "      <th>a3</th>\n",
+       "      <th>a4</th>\n",
+       "      <th>a5</th>\n",
+       "      <th>a6</th>\n",
+       "      <th>a7</th>\n",
+       "      <th>a8</th>\n",
+       "      <th>a9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>c0</th>\n",
+       "      <th>c1</th>\n",
+       "      <th>c2</th>\n",
+       "      <th>c3</th>\n",
+       "      <th>c4</th>\n",
+       "      <th>c5</th>\n",
+       "      <th>c6</th>\n",
+       "      <th>c7</th>\n",
+       "      <th>c8</th>\n",
+       "      <th>c9</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.806452</td>\n",
+       "      <td>0.765161</td>\n",
+       "      <td>0.734194</td>\n",
+       "      <td>0.865806</td>\n",
+       "      <td>0.708387</td>\n",
+       "      <td>0.749677</td>\n",
+       "      <td>0.744516</td>\n",
+       "      <td>0.716129</td>\n",
+       "      <td>0.705806</td>\n",
+       "      <td>0.760000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.685161</td>\n",
+       "      <td>0.721290</td>\n",
+       "      <td>0.569032</td>\n",
+       "      <td>0.790968</td>\n",
+       "      <td>0.651613</td>\n",
+       "      <td>0.775484</td>\n",
+       "      <td>0.762581</td>\n",
+       "      <td>0.584516</td>\n",
+       "      <td>0.736774</td>\n",
+       "      <td>0.579355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.806452</td>\n",
+       "      <td>0.680000</td>\n",
+       "      <td>0.685161</td>\n",
+       "      <td>0.809032</td>\n",
+       "      <td>0.674839</td>\n",
+       "      <td>0.726452</td>\n",
+       "      <td>0.710968</td>\n",
+       "      <td>0.698065</td>\n",
+       "      <td>0.625806</td>\n",
+       "      <td>0.718710</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.587097</td>\n",
+       "      <td>0.695484</td>\n",
+       "      <td>0.507097</td>\n",
+       "      <td>0.762581</td>\n",
+       "      <td>0.633548</td>\n",
+       "      <td>0.741935</td>\n",
+       "      <td>0.734194</td>\n",
+       "      <td>0.522581</td>\n",
+       "      <td>0.705806</td>\n",
+       "      <td>0.543226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.765161</td>\n",
+       "      <td>0.594839</td>\n",
+       "      <td>0.602581</td>\n",
+       "      <td>0.723871</td>\n",
+       "      <td>0.630968</td>\n",
+       "      <td>0.667097</td>\n",
+       "      <td>0.659355</td>\n",
+       "      <td>0.669677</td>\n",
+       "      <td>0.561290</td>\n",
+       "      <td>0.638710</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.509677</td>\n",
+       "      <td>0.664516</td>\n",
+       "      <td>0.421935</td>\n",
+       "      <td>0.734194</td>\n",
+       "      <td>0.584516</td>\n",
+       "      <td>0.708387</td>\n",
+       "      <td>0.705806</td>\n",
+       "      <td>0.458065</td>\n",
+       "      <td>0.643871</td>\n",
+       "      <td>0.486452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.680000</td>\n",
+       "      <td>0.486452</td>\n",
+       "      <td>0.538065</td>\n",
+       "      <td>0.630968</td>\n",
+       "      <td>0.576774</td>\n",
+       "      <td>0.594839</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.623226</td>\n",
+       "      <td>0.499355</td>\n",
+       "      <td>0.550968</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.440000</td>\n",
+       "      <td>0.625806</td>\n",
+       "      <td>0.378065</td>\n",
+       "      <td>0.700645</td>\n",
+       "      <td>0.548387</td>\n",
+       "      <td>0.669677</td>\n",
+       "      <td>0.672258</td>\n",
+       "      <td>0.393548</td>\n",
+       "      <td>0.576774</td>\n",
+       "      <td>0.440000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.615484</td>\n",
+       "      <td>0.421935</td>\n",
+       "      <td>0.486452</td>\n",
+       "      <td>0.532903</td>\n",
+       "      <td>0.543226</td>\n",
+       "      <td>0.522581</td>\n",
+       "      <td>0.532903</td>\n",
+       "      <td>0.587097</td>\n",
+       "      <td>0.432258</td>\n",
+       "      <td>0.489032</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.378065</td>\n",
+       "      <td>0.587097</td>\n",
+       "      <td>0.310968</td>\n",
+       "      <td>0.646452</td>\n",
+       "      <td>0.509677</td>\n",
+       "      <td>0.625806</td>\n",
+       "      <td>0.628387</td>\n",
+       "      <td>0.334194</td>\n",
+       "      <td>0.527742</td>\n",
+       "      <td>0.401290</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         a0        a1        a2        a3        a4        a5        a6  \\\n",
+       "0  0.806452  0.765161  0.734194  0.865806  0.708387  0.749677  0.744516   \n",
+       "1  0.806452  0.680000  0.685161  0.809032  0.674839  0.726452  0.710968   \n",
+       "2  0.765161  0.594839  0.602581  0.723871  0.630968  0.667097  0.659355   \n",
+       "3  0.680000  0.486452  0.538065  0.630968  0.576774  0.594839  0.600000   \n",
+       "4  0.615484  0.421935  0.486452  0.532903  0.543226  0.522581  0.532903   \n",
+       "\n",
+       "         a7        a8        a9  ...        c0        c1        c2        c3  \\\n",
+       "0  0.716129  0.705806  0.760000  ...  0.685161  0.721290  0.569032  0.790968   \n",
+       "1  0.698065  0.625806  0.718710  ...  0.587097  0.695484  0.507097  0.762581   \n",
+       "2  0.669677  0.561290  0.638710  ...  0.509677  0.664516  0.421935  0.734194   \n",
+       "3  0.623226  0.499355  0.550968  ...  0.440000  0.625806  0.378065  0.700645   \n",
+       "4  0.587097  0.432258  0.489032  ...  0.378065  0.587097  0.310968  0.646452   \n",
+       "\n",
+       "         c4        c5        c6        c7        c8        c9  \n",
+       "0  0.651613  0.775484  0.762581  0.584516  0.736774  0.579355  \n",
+       "1  0.633548  0.741935  0.734194  0.522581  0.705806  0.543226  \n",
+       "2  0.584516  0.708387  0.705806  0.458065  0.643871  0.486452  \n",
+       "3  0.548387  0.669677  0.672258  0.393548  0.576774  0.440000  \n",
+       "4  0.509677  0.625806  0.628387  0.334194  0.527742  0.401290  \n",
+       "\n",
+       "[5 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#locate and read data files\n",
+    "os.chdir(dataroot)\n",
+    "xdata,ydata = pd.read_csv('xdata_abc.csv'),pd.read_csv('ydata_abc.csv')\n",
+    "xdata.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cedec7b2",
+   "metadata": {},
+   "source": [
+    "To use FDataGrids, each column should be of equal length.\n",
+    "To acheive this the readdata class will be used to get the smoothed data each of equal vector legnth."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f0227e35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Letters.readdata import letterData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c9821a40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "letterdata = letterData('xdata_abc.csv','ydata_abc.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8815ad2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#return to original directory\n",
+    "os.chdir(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "98a23d00",
+   "id": "42a9cffa",
    "metadata": {},
    "outputs": [],
    "source": []
