Complete growth example with FPCA

--- a/FDA_letter_classifiers.ipynb
+++ b/FDA_letter_classifiers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "96e91431",
+   "id": "3d8b903a",
    "metadata": {},
    "source": [
     "Load in data tables and format them into F Data Grids"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c968a44e",
+   "id": "ccb3f84a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fb205808",
+   "id": "e87dfb3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dd7252c6",
+   "id": "4100322e",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d816022",
+   "id": "d90fa5aa",
    "metadata": {},
    "source": [
     "To use FDataGrids, each column should be of equal length.\n",
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "47f83a31",
+   "id": "33355d76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "980bc171",
+   "id": "9e5b9487",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "108ef10b",
+   "id": "49b4deb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6ad1c261",
+   "id": "dd212aee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ada53120",
+   "id": "961e54c4",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1ead3284",
+   "id": "9da6f548",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b762534",
+   "id": "ca8fea95",
    "metadata": {},
    "source": [
     "Place in FDataGrid"
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "04fd700b",
+   "id": "ff7d518a",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "2bc5c96e",
+   "id": "8a26805e",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "8d8de42d",
+   "id": "b8c06295",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "402a6437",
+   "id": "961e0f53",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "f806c464",
+   "id": "a5228221",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "3da9c2de",
+   "id": "938927d6",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "d914c9f0",
+   "id": "9c3885bd",
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "4e8af6f0",
+   "id": "5228e5d4",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "1c950b0f",
+   "id": "b4610ffd",
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a22fd51",
+   "id": "5c03c801",
    "metadata": {},
    "source": [
     "The models perform particularly well, although this is a very easy application. Depth classifier does not work well...\n",
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "bcf54c6d",
+   "id": "e2205ca1",
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23155368",
+   "id": "76f23323",
    "metadata": {},
    "source": [
     "## Clustering\n",
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "b208f971",
+   "id": "bca52aaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "e89e2f2c",
+   "id": "ba262b2a",
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "45903559",
+   "id": "c4300192",
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "056adfc2",
+   "id": "69900de5",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3e2eda7",
+   "id": "f82cc488",
    "metadata": {},
    "source": [
     "Here the centre of the cluster is plotted with estimator.cluster_centers_\n",
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "07491f0c",
+   "id": "b053c7cd",
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "0b031c23",
+   "id": "956e97e3",
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "061f29a1",
+   "id": "fe80efdb",
    "metadata": {},
    "source": [
     "Here we can see how much each entry resembles each cluster with a membershiplinesplot"
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "757f4aec",
+   "id": "3af7f953",
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a563ea8",
+   "id": "16834b9f",
    "metadata": {},
    "source": [
     "Here We see the same thing but in barplot form\n",
@@ -1053,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "c4c89eb3",
+   "id": "30f7d224",
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26a7e59a",
+   "id": "5b26ed0d",
    "metadata": {},
    "source": [
     "## FPCA\n",
@@ -1097,8 +1097,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 104,
+   "id": "585695c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skfda.exploratory.visualization import FPCAPlot\n",
+    "from skfda.preprocessing.dim_reduction import FPCA\n",
+    "from skfda.representation.basis import (\n",
+    "    BSplineBasis,\n",
+    "    FourierBasis,\n",
+    "    MonomialBasis,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6a76eaf4",
+   "id": "5dd95a90",
    "metadata": {},
    "outputs": [],
    "source": []
