Ensure manual BSpline is the same as BSpline performed in scikit-fda library

--- a/FDA_growth_example.ipynb
+++ b/FDA_growth_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6ec71e25",
+   "id": "9104f990",
    "metadata": {},
    "source": [
     "Start with scikit examples, then use this for FPCA on letter data"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5616134d",
+   "id": "1b913aca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1d3814f",
+   "id": "a4468a01",
    "metadata": {},
    "source": [
     "In this example use fetch growth dataset\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6930ef54",
+   "id": "390d9c8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a6621dc7",
+   "id": "40c8f026",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f87e80ed",
+   "id": "50e9b0a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2255733",
+   "id": "8b4cbe35",
    "metadata": {},
    "source": [
     "## FDataGrid\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "aff565d0",
+   "id": "2e984371",
    "metadata": {
     "scrolled": true
    },
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3d44cf7b",
+   "id": "5f2bddc0",
    "metadata": {
     "scrolled": true
    },
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3d4b1d4a",
+   "id": "a4ccdb87",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfb7e778",
+   "id": "7e65d53e",
    "metadata": {},
    "source": [
     "### Method 1: Maximum Depth Classifier\n",
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e64f8423",
+   "id": "934b099b",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93b21753",
+   "id": "08e55bba",
    "metadata": {},
    "source": [
     "### Method 2: K-Nearest Neighbours Classifier\n",
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "dc6e6655",
+   "id": "6e34bc8b",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f9c6c62",
+   "id": "6d29b409",
    "metadata": {},
    "source": [
     "### Method 3: Nearest Centroid Classifier\n",
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "60941807",
+   "id": "9809b7ee",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ec7eaf5",
+   "id": "a653d995",
    "metadata": {},
    "source": [
     "### Method 4: Functional Quadratic Discriminant\n",
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "306d95c4",
+   "id": "d4ed5893",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1f83092e",
+   "id": "62d883a4",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cf4655c6",
+   "id": "a91b0563",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14bf7b46",
+   "id": "a8894717",
    "metadata": {},
    "source": [
     "## FPCA on Berkeley Growth Study"
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4e0acf3b",
+   "id": "99e2392d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2c95cf25",
+   "id": "f5a6c942",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45acb751",
+   "id": "67240bc2",
    "metadata": {},
    "source": [
     "### Discretised FCPA - without BSpline\n",
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1423290f",
+   "id": "81dc2e4c",
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8481cbd0",
+   "id": "a6d0b711",
    "metadata": {},
    "source": [
     "### FDataBasis\n",
@@ -742,9 +742,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "7ed855e8",
-   "metadata": {},
+   "execution_count": 70,
+   "id": "1af3c967",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -753,7 +755,7 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -783,8 +785,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "24e27e0b",
+   "execution_count": 71,
+   "id": "c48a9a2d",
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +986,7 @@
        "    extrapolation=None)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "4113907c",
+   "id": "f8f67db8",
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "647baaf8",
+   "id": "2dd11841",
    "metadata": {},
    "source": [
     "### Plot\n",
@@ -1053,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "91d6b226",
+   "id": "b8cfa101",
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56feb22f",
+   "id": "118e6766",
    "metadata": {},
    "source": [
     "## FPCA scores\n",
@@ -1103,7 +1105,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a40d2a08",
+   "id": "093a9b3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "afb36956",
+   "id": "84c77bcf",
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaff9b4a",
+   "id": "43d98cc8",
    "metadata": {},
    "source": [
     "If you want the correct labels in legend, it should be ['male','male','male'...'female'] as the hue."
@@ -1139,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "6ae98759",
+   "id": "0b72119c",
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a49b3213",
+   "id": "c7697b60",
    "metadata": {},
    "source": [
     "Here other ML clustering and classification methods could also be used."
